objects/Partner_Attended_Event__c.object
<CustomObject><fields>
        <fullName>Expo__c</fullName>
        <label>Expo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expo 1</fullName>
                </value>
                <value>
                    <fullName>Expo 2</fullName>
                </value>
                <value>
                    <fullName>Expo3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Partner_Agreement__c</fullName>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Partner Attended Events</relationshipLabel>
        <relationshipName>Partner_Attended_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Year__c</fullName>
        <description>indicates the year the partner attended the expo</description>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>to capture events a partner attended within an Agreement</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Partner Attended Event</label><nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Partner Attended Event Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Partner Attended Events</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>